[package]
name = "odt"
version = "0.4.0"
edition = "2024"
description = "devicetree tools"
repository = "https://github.com/a6f/odt"
readme = "README.md"
default-run = "dtc"

[dependencies]
hashlink = "0.10"
pest = "2"
pest_derive = "2"
clap = { version = "4.5", features = ["derive"], optional = true }
bumpalo = { version = "3.16.0", features = ["collections"] }
pestle = "0.2"
num-derive = "0.4.2"
num-traits = "0.2.19"

[features]
cli = ["clap"]
wrapping-arithmetic = []

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "dtc"
required-features = ["cli"]

[[bin]]
name = "dtsfmt"
required-features = ["cli"]

[[example]]
name = "positions"
required-features = ["cli"]
